--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-	Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	Cantarell, Fira Sans, Droid Sans,  Neue, sans-serif;
 }
 
 a {
@@ -26,5 +26,23 @@ a {
 	body {
 		color: white;
 		background: #13121c;
+	}
+}
+
+@media (prefers-color-scheme: light) {
+	html {
+		color-scheme: dark;
+	}
+	body {
+		color: white;
+		background: #13121c;
+	}
+
+	.code {
+		font-size: 14px;
+	}
+
+	button {
+		white-space: nowrap;
 	}
 }
