--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,17 +4,12 @@
 
 @layer base {
   html {
-    background: #232226;
     scroll-behavior: smooth;
     font-family: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   }
 
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  * {
-    box-sizing: border-box;
+  body {
+    margin: 0;
+    padding: 0;
   }
 }
